# f5xc-site-query

./: .gitignore  README.md  get-sites.py  pyproject.toml  requirements.txt
lib/: api.py  const.py  info.py  loader.py
lib/processor/: base.py  bgp.py  cloudconnect.py  lb.py  origin_pools.py  originpool.py  proxy.py  segment.py  site.py  smg.py  vs.py
tests/: test_api.py  test_query.py
